# GitSync

./: .env.example  .gitignore  LICENSE  README.md  build.sh  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
