[project]
name = "gitsync"
version = "0.1.0"
description = "Mirror GitHub repositories to GitLab, preserving full commit history."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "requests",
    "rich",
]

[dependency-groups]
dev = [
    "pip-audit",
]
